Changed alt message for bitcoin image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>React-based app to help users practice language skills interactively.</p>
       </div>
       <div class="project-card">
-        <img src="images/bitcoin.jpg" alt="Bitcoin App"/>
+        <img src="images/bitcoin.jpg" alt="Bitcoin Tracker Screenshot"/>
         <h3>Bitcoin Market Tracker</h3>
         <p>Tracks real-time Bitcoin prices using APIs. Built with Python & Tkinter.</p>
       </div>
