Updated image in html to correspond with changes

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
   </section>
 
   <section id="projects" class="container">
-    <h2>Projects</h2>
-    <div class="project-grid">
-      <div class="project-card">
-        <img src="images/langapp.jpg" alt="Language App"/>
-        <h3>Language Learning App</h3>
-        <p>React-based app to help users practice language skills interactively.</p>
-      </div>
-      <div class="project-card">
-        <img src="images/bitcoin.jpg" alt="Bitcoin Tracker Screenshot"/>
-        <h3>Bitcoin Market Tracker</h3>
-        <p>Tracks real-time Bitcoin prices using APIs. Built with Python & Tkinter.</p>
-      </div>
+  <h2>Projects</h2>
+  <div class="project-grid">
+    <div class="project-card">
+      <img src="images/sunapp.jpg" alt="Sunrise Sunset App"/>
+      <h3>Sunrise/Sunset Dashboard</h3>
+      <p>A web app that shows real-time sun and moon data using APIs. Built with HTML, CSS, and JavaScript.</p>
     </div>
-  </section>
+    <div class="project-card">
+      <img src="images/bitcoin.jpg" alt="Bitcoin Tracker Screenshot"/>
+      <h3>Bitcoin Market Tracker</h3>
+      <p>Tracks real-time Bitcoin prices using APIs. Built with Python & Tkinter.</p>
+    </div>
+  </div>
+</section>
 
   <section id="contact" class="container">
     <h2>Contact</h2>
