Updated email on page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <section id="contact" class="container">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:josephnwoke021@gmail.com">joseph@example.com</a></p>
+    <p>Email: <a href="mailto:josephnwoke021@gmail.com">josephnwoke021@gmail.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/josephnwoke" target="_blank">linkedin.com/in/josephnwoke</a></p>
   </section>
 
