--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
   </div>
 </section>
 
+<section id="skills" class="container">
+  <h2>Skills</h2>
+  <div class="skills-grid">
+    <div class="skill">HTML</div>
+    <div class="skill">CSS</div>
+    <div class="skill">JavaScript</div>
+    <div class="skill">Python</div>
+    <div class="skill">Java</div>
+    <div class="skill">Git & GitHub</div>
+    <div class="skill">APIs</div>
+    <div class="skill">React</div>
+    <div class="skill">Game Development (Exploring)</div>
+  </div>
+</section>
+
   <section id="projects" class="container">
     <h2>Projects</h2>
     <div class="project-grid">
