Replaced skill set

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="skill">Python</div>
     <div class="skill">Java</div>
     <div class="skill">Git & GitHub</div>
-    <div class="skill">APIs</div>
+    <div class="skill">SQL</div>
     <div class="skill">React</div>
     <div class="skill">Game Development (Exploring)</div>
   </div>
