--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     <div class="project-card">
       <img src="images/bitcoin.jpg" alt="Bitcoin Tracker Screenshot"/>
       <h3>Bitcoin Market Tracker</h3>
-      <p>Tracks real-time Bitcoin prices using APIs. Built with Python & Tkinter.</p>
+      <p>Tracks real-time Bitcoin prices using APIs and displays live data inside a graphical user interface (GUI).</p>
+      <p>Built with Python, Tkinter, REST APIs, JSON, Git.</p>
     </div>
   </div>
 </section>
