--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
       <h3>Sunrise/Sunset Dashboard</h3>
       <p>A web app that shows real-time sun and moon data using APIs. Built with HTML, CSS, and JavaScript.</p>
     </div>
-    <div class="project-card">
-      <img src="images/bitcoin.jpg" alt="Bitcoin Tracker Screenshot"/>
-      <h3>Bitcoin Market Tracker</h3>
-      <p>Tracks real-time Bitcoin prices using APIs and displays live data inside a graphical user interface (GUI).</p>
-      <p>Built with Python, Tkinter, REST APIs, JSON, Git.</p>
-    </div>
+    <a href="https://github.com/mpervaiz25/ITMS_448_Open_Source_app" target="_blank" class="project-link">
+      <div class="project-card">
+        <img src="images/bitcoin.jpg" alt="Bitcoin Tracker Screenshot"/>
+        <h3>Bitcoin Market Tracker</h3>
+        <p>Tracks real-time Bitcoin prices using APIs and displays live data inside a graphical user interface (GUI).</p>
+        <p>Built with Python, Tkinter, REST APIs, JSON, Git.</p>
+      </div>
+    </a>
   </div>
 </section>
 
