Updated indentation and added link to redirect to project site

--- a/index.html
+++ b/index.html
@@ -49,14 +49,17 @@
   </div>
 </section>
 
-  <section id="projects" class="container">
-    <h2>Projects</h2>
-    <div class="project-grid">
-    <div class="project-card">
-      <img src="images/sunapp.jpg" alt="Sunrise Sunset App"/>
-      <h3>Sunrise/Sunset Dashboard</h3>
-      <p>A web app that shows real-time sun and moon data using APIs. Built with HTML, CSS, and JavaScript.</p>
-    </div>
+<section id="projects" class="container">
+  <h2>Projects</h2>
+  <div class="project-grid">
+    <a href="https://joenwoke.github.io/ITMD-441-Lab-6/" target="_blank" class="project-link">
+      <div class="project-card">
+        <img src="images/sunapp.jpg" alt="Sunrise Sunset App"/>
+        <h3>Sunrise/Sunset Dashboard</h3>
+        <p>A web app that shows real-time sun and moon data using APIs. Built with HTML, CSS, and JavaScript.</p>
+      </div>
+    </a>
+
     <a href="https://github.com/mpervaiz25/ITMS_448_Open_Source_app" target="_blank" class="project-link">
       <div class="project-card">
         <img src="images/bitcoin.jpg" alt="Bitcoin Tracker Screenshot"/>
