Updated Project card with more information

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       <div class="project-card">
         <img src="images/sunapp.jpg" alt="Sunrise Sunset App"/>
         <h3>Sunrise/Sunset Dashboard</h3>
-        <p>A web app that shows real-time sun and moon data using APIs. Built with HTML, CSS, and JavaScript.</p>
+        <p>A web app that displays real-time sunrise, sunset, and solar noon data using external APIs.</p>
+        <p> Built with HTML, CSS, JavaScript, and JSON.</p>
       </div>
     </a>
 
