--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p>Web Developer & Game Enthusiast based in Chicago.</p>
         <nav class="hero-nav">
           <a href="#about">About</a>
+          <a href="#skills">Skills</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
         </nav>
