Updated About me section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
     <div class="about-card">
       <h2>About Me</h2>
       <p>Hi!, I'm Joseph, a web developer, IT & Cybersecurity student at Illinois Tech, passionate about building interactive and user-centered digital experiences.</p>
-      <p>I work with HTML, CSS, JavaScript, and Python, and I am currently expanding into React and backend development. I am also exploring game development and excited to learn how to bring immersive, interactive ideas to life.</p>
-      <p>Projects I have worked on include a Sunrise/Sunset dashboard and a real-time Bitcoin market tracker. I also provide technical support for nonprofit community initiatives.</p>
+      <p>I am currently expanding into React, TypeScript, Backend development and frameworks. I am also exploring game development and excited to learn how to bring immersive, interactive ideas to life.</p>
       <p>Outside of coding, I enjoy gaming, soccer, and experimenting with app concepts that combine creativity with functionality. Also a huge FC Barcelona fan.</p>
-      <p>I am always open to internship opportunities or collaborations that challenge me and help me grow as a developer and future game creator.</p>
+      <p>Open to internship opportunities or collaborations that challenge me and help me grow as a developer and game creator.</p>
     </div>
   </section>
 
