Updated About me section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="about-card">
       <h2>About Me</h2>
       <hr />
-      <p>Hi!, I'm Joseph — a web developer, IT & Cybersecurity student at Illinois Tech, passionate about building interactive and user-centered digital experiences.</p>
+      <p>Hi!, I'm Joseph — a Cybersecurity & Information Technology and Mangement student at Illinois Tech, passionate about building interactive and user-centered digital experiences.</p>
       <p>Currently expanding into React, TypeScript, Backend development and frameworks. I am also exploring game development and excited to learn how to bring immersive, interactive ideas to life.</p>
       <p>Outside of coding, I enjoy gaming, soccer, and experimenting with app concepts that combine creativity with functionality. Also a huge FC Barcelona fan.</p>
       <p>Open to internship opportunities or collaborations that challenge me and help me grow as a developer and game creator.</p>
