--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Joseph Nwoke | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
