--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           <h3>Sunrise/Sunset Dashboard</h3>
           <p>A web app that displays real-time sunrise, sunset, and solar noon data using external APIs.</p>
           <p>Built with HTML, CSS, JavaScript, and JSON.</p>
+          <a href="https://joenwoke.github.io/ITMD-441-Lab-6/" class="project-button" target="blank">View Website</a>
         </div>
       </a>
 
@@ -87,6 +88,7 @@
           <h3>Bitcoin Market Tracker</h3>
           <p>Tracks real-time Bitcoin prices using APIs and displays live data inside a graphical user interface (GUI).</p>
           <p>Built with Python, Tkinter, REST APIs, JSON, Git.</p>
+          <a href="https://github.com/mpervaiz25/ITMS_448_Open_Source_app" class="project-button" target="blank">View on GitHub</a>
         </div>
       </a>
     </div>
