Created separate div to hold click button

--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
   <section id="projects" class="container">
     <h2>Projects</h2>
     <div class="project-grid">
-      <a href="https://joenwoke.github.io/ITMD-441-Lab-6/" target="_blank" class="project-link">
         <div class="project-card">
           <img src="images/sunapp.jpg" alt="Sunrise Sunset App"/>
           <h3>Sunrise/Sunset Dashboard</h3>
           <p>A web app that displays real-time sunrise, sunset, and solar noon data using external APIs.</p>
           <p>Built with HTML, CSS, JavaScript, and JSON.</p>
+          <div class="project-buttons">
+          </div>
         </div>
       </a>
 
