Updated indentation and project-buttons class

--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
         </div>
       </div>
 
-      
-        <div class="project-card">
-          <img src="images/bitcoin.jpg" alt="Bitcoin Tracker Screenshot"/>
-          <h3>Bitcoin Market Tracker</h3>
-          <p>Tracks real-time Bitcoin prices using APIs and displays live data inside a graphical user interface (GUI).</p>
-          <p>Built with Python, Tkinter, REST APIs, JSON, Git.</p>
+      <div class="project-card">
+        <img src="images/bitcoin.jpg" alt="Bitcoin Tracker Screenshot"/>
+        <h3>Bitcoin Market Tracker</h3>
+        <p>Tracks real-time Bitcoin prices using APIs and displays live data inside a graphical user interface (GUI).</p>
+        <p>Built with Python, Tkinter, REST APIs, JSON, Git.</p>
+        <div class="project-buttons">
+          
         </div>
-      </a>
+      </div>
     </div>
   </section>
 
