Updated page with link to project's github page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p>Tracks real-time Bitcoin prices using APIs and displays live data inside a graphical user interface (GUI).</p>
         <p>Built with Python, Tkinter, REST APIs, JSON, Git.</p>
         <div class="project-buttons">
-          
+          <a href="https://github.com/mpervaiz25/ITMS_448_Open_Source_app" target="_blank" class="project-btn">View on GitHub</a>
         </div>
       </div>
     </div>
