--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
   <div class="sticky-nav" id="stickyNav">
     <div class="nav-container">
       <div class="logo">Joseph Nwoke</div>
+
+      <!-- Hamburger Icon -->
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+      <!-- Desktop Navigation-->
       <nav class="main-nav">
         <a href="#home">Home</a>
         <a href="#skills">Skills</a>
