Added mobile menu navigation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
         <a href="#contact">Contact</a>
       </nav>
     </div>
+
+    <!-- Full screen mobile menu overlay-->
+    <div class="mobile-nav" id="mobileNav">
+      <button class="close-btn" id="closeBtn">&times;</button>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </div>
 
   <!-- ABOUT SECTION -->
