--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     <h2>Contact</h2>
     <p>Email: <a href="mailto:josephnwoke021@gmail.com">josephnwoke021@gmail.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/josephnwoke" target="_blank">linkedin.com/in/josephnwoke</a></p>
+    <p>GitHub: <a href="https://github.com/joenwoke" target="_blank">github.com/joenwoke</a></p>
   </section>
 
   <!-- FOOTER -->
