Updated contact section with new class names and CDN icons

--- a/index.html
+++ b/index.html
@@ -116,11 +116,22 @@
   </section>
 
   <!-- CONTACT SECTION -->
-  <section id="contact" class="container">
+  <section id="contact" class="container contact-section">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:josephnwoke021@gmail.com">josephnwoke021@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/josephnwoke" target="_blank">linkedin.com/in/josephnwoke</a></p>
-    <p>GitHub: <a href="https://github.com/joenwoke" target="_blank">github.com/joenwoke</a></p>
+    <div class="contact-card">
+      <div class="contact-item">
+        <i class="fas fa-envelope contact-icon"></i>
+        <a href="mailto:josephnwoke021@gmail.com">josephnwoke021@gmail.com</a>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-linkedin contact-icon"></i>
+        <a href="https://linkedin.com/in/josephnwoke" target="_blank">linkedin.com/in/josephnwoke</a>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-github contact-icon"></i>
+        <a href="https://github.com/joenwoke" target="_blank">github.com/joenwoke</a>
+      </div>
+    </div>
   </section>
 
   <!-- FOOTER -->
