Added link to image and twitter page

--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
         <i class="fab fa-github contact-icon"></i>
         <a href="https://github.com/joenwoke" target="_blank">github.com/joenwoke</a>
       </div>
+      <div class="contact-item">
+        <img src="images/x-logo.png" alt="X logo"/>
+        <a href="https://x.com/thejosephnwoke" target="_blank">x.com/thejosephnwoke</a>
+      </div>
     </div>
   </section>
 
