Added link to Instagram profile

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
         <img src="images/x-logo.png" alt="X logo"/>
         <a href="https://x.com/thejosephnwoke" target="_blank">x.com/thejosephnwoke</a>
       </div>
+      <div class="contact-item">
+        <i class="fab fa-instagram contact-icon"></i>
+        <a href="https://www.instagram.com/thejosephnwoke/" target="_blank">instagram.com/thejosephnwoke</a>
+      </div>
     </div>
   </section>
 
